--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Samuel1337/alter-learning-video-chat",
   "name": "alter-learning-video-chat",
   "version": "1.8.0",
   "scripts": {
