--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://samuel1337.github.io/alter-learning-video-chat/",
+  "homepage": "https://samuel1337.github.io",
   "name": "alter-learning-video-chat",
   "version": "1.8.0",
   "scripts": {
